ignore svg.disabled=false in about pages
Categories
(Core :: SVG, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox84 | --- | fixed |
People
(Reporter: thorin, Assigned: me)
References
(Blocks 1 open bug)
Details
(Whiteboard: [tor 27002])
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0
Steps to reproduce:
Bug 1216893 introduced svg.disabled
. Tor Browser flips this pref in it's slider settings. When false, this is causing SVG images in about:tor to not render, which looking at the code seems like a regression
// We allow SVG (regardless of the pref) if this is a system or add-on
// principal, or if this load was requested for a system or add-on principal
Enable SVG in about: pages even when disabled via pref
[1] https://gitlab.torproject.org/tpo/applications/tor-browser/-/issues/40204
[2] https://gitlab.torproject.org/tpo/applications/torbutton/-/issues/40020
Whiteboard: [tor 40204]
Reporter | ||
Updated•4 years ago
|
Updated•4 years ago
|
Reporter | ||
Comment 1•4 years ago
|
||
[tor 27002] .. 40204 was just closed as a dupe
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 4•4 years ago
|
||
bugherder |
Comment 5•4 years ago
|
||
retitling since system principal was allowed already.
Description
•